[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cholinesterase-qsar"
version = "0.1.0"
description = "Leakage-safe ensemble QSAR pipeline for AChE and BuChE bioactivity classification."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Bilal Ahmad"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "lightgbm>=4.0",
  "joblib>=1.3"
]

[tool.setuptools.packages.find]
where = ["src"]
